--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
+  image_test_utils: ^1.0.0
+  flutter_driver:
+    sdk: flutter
+  test: any
   flutter_test:
     sdk: flutter
   pedantic: 1.8.0+1
